# pkg/dashboard/domain/specs.swagger.json
@@ -22,6 +22,7 @@
     }
   ],
   "schemes": [
+    "http",
     "https"
   ],
   "consumes": [
@@ -42,30 +43,6 @@
               "$ref": "#/definitions/v1GetAccountResponse"
             }
           },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
           "default": {
             "description": "An unexpected error response.",
             "schema": {
@@ -73,60 +50,6 @@
             }
           }
         },
-        "tags": [
-          "AuthenticationService"
-        ]
-      },
-      "delete": {
-        "summary": "DeleteAccount ...",
-        "operationId": "AuthenticationService_DeleteAccount",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "email",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
         "tags": [
           "AuthenticationService"
         ]
@@ -138,31 +61,8 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1CreateAccountResponse"
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
+              "type": "object",
+              "properties": {}
             }
           },
           "default": {
@@ -185,61 +85,6 @@
         "tags": [
           "AuthenticationService"
         ]
-      },
-      "put": {
-        "summary": "UpdateAccount ...",
-        "operationId": "AuthenticationService_UpdateAccount",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1UpdateAccountResponse"
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1UpdateAccountRequest"
-            }
-          }
-        ],
-        "tags": [
-          "AuthenticationService"
-        ]
       }
     },
     "/dashboard/v1/login": {
@@ -250,32 +95,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
+              "$ref": "#/definitions/v1LoginResponse"
             }
           },
           "default": {
@@ -310,30 +130,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/v1ListResourcesResponse"
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
             }
           },
           "default": {
@@ -385,30 +181,6 @@
               "$ref": "#/definitions/v1CreateResourceResponse"
             }
           },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
           "default": {
             "description": "An unexpected error response.",
             "schema": {
@@ -448,30 +220,6 @@
               "$ref": "#/definitions/v1GetResourceResponse"
             }
           },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
           "default": {
             "description": "An unexpected error response.",
             "schema": {
@@ -508,30 +256,6 @@
               "properties": {}
             }
           },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
           "default": {
             "description": "An unexpected error response.",
             "schema": {
@@ -557,7 +281,7 @@
           "ResourceService"
         ]
       },
-      "put": {
+      "patch": {
         "summary": "UpdateResource ...",
         "operationId": "ResourceService_UpdateResource",
         "responses": {
@@ -565,30 +289,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/v1UpdateResourceResponse"
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
             }
           },
           "default": {
@@ -634,30 +334,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/v1GetResourceRelationResponse"
-            }
-          },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
             }
           },
           "default": {
@@ -717,30 +393,6 @@
               "$ref": "#/definitions/v1GetSchemaResponse"
             }
           },
-          "400": {
-            "description": "Bad request.",
-            "schema": {
-              "$ref": "#/definitions/v1ErrorResponse"
-            }
-          },
-          "403": {
-            "description": "Unauthorized.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
-          "500": {
-            "description": "Server error.",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          },
           "default": {
             "description": "An unexpected error response.",
             "schema": {
@@ -782,10 +434,13 @@
       "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
-    "protobufEmpty": {
-      "type": "object",
-      "description": "service Foo {\n      rpc Bar(google.protobuf.Empty) returns (google.protobuf.Empty);\n    }",
-      "title": "A generic empty message that you can re-use to avoid defining duplicated\nempty messages in your APIs. A typical example is to use it as the request\nor the response type of an API method. For instance:"
+    "protobufNullValue": {
+      "type": "string",
+      "enum": [
+        "NULL_VALUE"
+      ],
+      "default": "NULL_VALUE",
+      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\nThe JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
     },
     "rpcStatus": {
       "type": "object",
@@ -858,14 +513,9 @@
       "properties": {
         "admin": {
           "$ref": "#/definitions/v1Admin"
-        }
-      }
-    },
-    "v1CreateAccountResponse": {
-      "type": "object",
-      "properties": {
-        "admin": {
-          "$ref": "#/definitions/v1Admin"
+        },
+        "password": {
+          "type": "string"
         }
       }
     },
@@ -873,14 +523,6 @@
       "type": "object",
       "properties": {
         "key": {
-          "type": "string"
-        }
-      }
-    },
-    "v1ErrorResponse": {
-      "type": "object",
-      "properties": {
-        "message": {
           "type": "string"
         }
       }
@@ -921,7 +563,7 @@
       "type": "object",
       "properties": {
         "data": {
-          "$ref": "#/definitions/protobufAny"
+          "type": "object"
         }
       }
     },
@@ -952,6 +594,14 @@
         }
       }
     },
+    "v1LoginResponse": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        }
+      }
+    },
     "v1Role": {
       "type": "string",
       "enum": [
@@ -969,22 +619,6 @@
         "SCOPE_WRITE"
       ],
       "default": "SCOPE_UNSPECIFIED"
-    },
-    "v1UpdateAccountRequest": {
-      "type": "object",
-      "properties": {
-        "admin": {
-          "$ref": "#/definitions/v1Admin"
-        }
-      }
-    },
-    "v1UpdateAccountResponse": {
-      "type": "object",
-      "properties": {
-        "admin": {
-          "$ref": "#/definitions/v1Admin"
-        }
-      }
     },
     "v1UpdateResourceResponse": {
       "type": "object",
